--- a/WPFSampleApp/MainWindow.xaml
+++ b/WPFSampleApp/MainWindow.xaml
@@ -1,12 +1,97 @@
-﻿<Window x:Class="WPFSampleApp.MainWindow"
+﻿<Window
+    x:Name="MyWindow"
+    x:Class="WPFSampleApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFSampleApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
+        Title="MainWindow" Height="350" Width="525"
         
+        >
+    <Window.Resources>
+        <Style TargetType="Button" x:Key="btnStyleBlue">
+            <Setter Property="Background" Value="Blue"></Setter>
+            <Setter Property="FontWeight" Value="Bold"></Setter>
+            <Setter Property="Margin" Value="3"></Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Ellipse Fill="Blue"></Ellipse>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"></ContentPresenter>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Aqua"></Setter>
+                    <Setter Property="Foreground" Value="Black"></Setter>
+                </Trigger>
+            </Style.Triggers>
+            
+        </Style>
+        <Style TargetType="Button"  BasedOn="{StaticResource btnStyleBlue}" x:Key="btnStyleRed">
+            <Setter Property="Background" Value="Red"></Setter>
+        </Style>
+        <Style TargetType="Button" x:Key="styleCtrlTemplate">
+            <Setter Property="Background" Value="Aquamarine"></Setter>
+        </Style>
+        <DataTemplate x:Key="dataTemplateLastName">
+            <TextBlock Text="{Binding LastName}" Height="30" Margin="4"></TextBlock>
+        </DataTemplate>
+    </Window.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="300"></ColumnDefinition>
+            <ColumnDefinition Width="300"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <TextBox Grid.Row="0" Grid.Column="0" x:Name="txt1" Margin="3" Text="{Binding ElementName =MyWindow, Path=TestDependency}"/>
+        <TextBox Grid.Row="0" Grid.Column="1" x:Name="txt2" Margin="3" Text="{Binding ElementName =txt1, Path=Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <Button x:Name="btn1" Grid.Row="1" Grid.Column="0" Content="Test"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="50">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=txt1, Path=IsFocused}" Value="False">
+                            <Setter Property="Background" Value="Green"></Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+        <Button x:Name="btn2" Grid.Row="1" Grid.Column="1" Content="Test" Style="{StaticResource styleCtrlTemplate}"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="50" >
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Grid>
+                        <Ellipse Fill="Red"></Ellipse>
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"></ContentPresenter>
+                    </Grid>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <Button Grid.Row="2" Grid.Column="0" x:Name="btn3" Content="Click" Style="{StaticResource btnStyleBlue}" Height="50" Width="50"></Button>
+        <ContentPresenter Grid.Row="3" Grid.Column="0" Content="{Binding objEmployee}">
+            <ContentPresenter.ContentTemplate>
+                <DataTemplate>
+                    <Label Content="{Binding FirstName}" Height="30" Margin="4"></Label>
+                </DataTemplate>
+            </ContentPresenter.ContentTemplate>
+        </ContentPresenter>
+        <ContentPresenter Grid.Row="3" Grid.Column="1" x:Name="txt3" Margin="3" Content="{Binding objEmployee}" ContentTemplate="{StaticResource dataTemplateLastName}"  Height="40" Width="100" />
     </Grid>
+    <!--<StackPanel Orientation="Vertical">
+        <Button Width="100" Height="50"></Button>
+        <Button Width="100" Height="50"></Button>
+        <Button Width="100" Height="50"></Button>
+        <Button Width="100" Height="50"></Button>
+    </StackPanel>-->
 </Window>
